--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:19.4.0'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-firestore:21.7.0'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
     implementation 'com.mapbox.navigation:core:1.0.0'
     implementation 'com.mapbox.navigation:ui:1.0.0'
     implementation 'com.mapbox.common:logger:0.2.0'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
