--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -46,21 +47,31 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:19.4.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //Authentication and Firebase
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-firestore:21.7.0'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.4.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //Images
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+    //Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
     implementation 'com.mapbox.navigation:core:1.0.0'
     implementation 'com.mapbox.navigation:ui:1.0.0'
     implementation 'com.mapbox.common:logger:0.2.0'
-    implementation 'com.mikhaellopez:circularimageview:4.2.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services'
+
+    //Anychart
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
