--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
                 password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
             }
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 
